Fix HTML structure and update title and description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.B. Lavate Medical | एस.बी. लवटे मेडिकल, सांगोला | Trusted Pharmacy</title>
+    <title>S.B. Lavate Medical | एस.बी. लवटे मेडिकल, सांगोला | Trusted medical </title>
     
     <meta name="description" content="S.B. Lavate Medical (एस.बी. लवटे मेडिकल) - Most reliable pharmacy in Sangola center. Located opposite ST Stand. Quality healthcare and trusted staff. Proprietor: Swapnil Lavte.">
     
@@ -233,3 +233,4 @@
 </body>
 
 </html>
+
