--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+
     
     <style>
         html { scroll-behavior: smooth; }
@@ -233,4 +235,5 @@
 </body>
 
 </html>
+
 
