--- a/index.html
+++ b/index.html
@@ -123,7 +123,15 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div class="h-[500px] rounded-[40px] overflow-hidden shadow-2xl border-8 border-white">
-                    <iframe src="https://maps.google.com/maps/contrib/103894721417311439686" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3801.373456789!2d75.197!3d17.439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTfCsDI2JzIwLjQiTiA3NcKwMTEnNDkuMiJF!5e0!3m2!1sen!2sin!4v17050000000004"
+  width="100%"
+  height="100%"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
                 </div>
                 <div class="space-y-8">
                     <div class="bg-white p-10 rounded-[40px] shadow-sm border border-slate-100">
@@ -144,7 +152,12 @@
                         </div>
                         <div class="mt-10 flex gap-4">
                             <a href="tel:09923157601" class="flex-1 bg-emerald-600 text-white py-4 rounded-2xl font-bold text-center hover:bg-emerald-700 transition">Call Now</a>
-                            <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3801.373456789!2d75.197!3d17.439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTfCsDI2JzIwLjQiTiA3NcKwMTEnNDkuMiJF!5e0!3m2!1sen!2sin!4v17050000000004" class="flex-1 border-2 border-emerald-600 text-emerald-600 py-4 rounded-2xl font-bold text-center hover:bg-emerald-50 transition">Get Directions</a>
+                            <a href="https://www.google.com/maps?q=S.B.+Lavate+Medical+Sangola"
+   target="_blank">
+   Get Directions
+</a>
+
+                           
                         </div>
                     </div>
                 </div>
@@ -235,6 +248,7 @@
 </body>
 
 </html>
+
 
 
 
